--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/citiufpe/citi-webplate/issues"
   },
-  "homepage": "https://github.com/citiufpe/citi-webplate#readme"
+  "homepage": "https://github.com/citiufpe/citi-webplate#readme",
+  "devDependencies": {
+    "child_process": "^1.0.2",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.7.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0"
+  }
 }
